--- a/gradle.properties
+++ b/gradle.properties
@@ -30,12 +30,16 @@ org.gradle.configuration-cache.parallel=true
 #######################################\u81EA\u5B9A\u4E49\u5C5E\u6027##########################################
 version=2025.07
 
-#\u4EE5\u4E0B\u914D\u7F6E\u5728 GRADLE_USER_HOME/gradle.properties
+########\u4EE5\u4E0B\u914D\u7F6E\u5728 GRADLE_USER_HOME/gradle.properties  \u6216\u8005\u5728\u5BB6\u76EE\u5F55 .gradle/gradle.properties
 
 #maven\u4ED3\u5E93\u4E0A\u4F20signing
 #signing.keyId=xxxxxx
 #signing.password=xxxxx
 #signing.secretKeyRingFile=xxxxx
+
+#maven\u4E2D\u592E\u4ED3\u5E93\u7528\u6237\u540D\u5BC6\u7801
+#mavenCentralUsername=xxxxx
+#mavenCentralPassword=xxxxx
 
 #maven\u4E2D\u592E\u4ED3\u5E93\u7528\u6237\u540D\u5BC6\u7801
 #ossrhUsername=xxxx
@@ -50,8 +54,8 @@ version=2025.07
 #mavenPasswordNew=xxxxx
 
 #gradle\u63D2\u4EF6key,secret
-#gradle.publish.key=xxx
-#gradle.publish.secret=xxx
+#gradle.publish.key=xxxxx
+#gradle.publish.secret=xxxxx
 
 #\u6291\u5236\u4E0A\u4F20jar\u5305\u5230 aliyun\u3001github \u62A5\u9519
 systemProp.org.gradle.internal.publish.checksums.insecure=true
