--- a/taotao-cloud-plugin/taotao-cloud-gradle-plugin/build.gradle
+++ b/taotao-cloud-plugin/taotao-cloud-gradle-plugin/build.gradle
@@ -108,33 +108,49 @@ gradlePlugin {
             implementationClass = 'com.taotao.cloud.gradle.plugin.MyPlugin'
             displayName = "taotao-cloud-plugin gradle plugin"
             description = 'taotao-cloud-plugin gradle plugin Please use!'
+            tags = ['taotao', 'cloud']
         }
         bomPlugin {
             id = "io.github.shuigedeng.bom"
             implementationClass = "com.taotao.cloud.gradle.springboot.plugin.BomPlugin"
             displayName = 'springboot bom plugin'
             description = 'springboot bom plugin'
-            tags.set(['search', 'tags', 'for', 'your', 'hello', 'plugin'])
+            tags = ['taotao', 'cloud', 'bom']
         }
         modulePlugin {
             id = "io.github.shuigedeng.module"
             implementationClass = "com.taotao.cloud.gradle.springboot.plugin.ModulePlugin"
+            displayName = 'springboot module plugin'
+            description = 'springboot module plugin'
+            tags = ['taotao', 'cloud', 'module']
         }
         commonPlugin {
             id = "io.github.shuigedeng.common"
             implementationClass = "com.taotao.cloud.gradle.springboot.plugin.CommonPlugin"
+            displayName = 'springboot common plugin'
+            description = 'springboot common plugin'
+            tags = ['taotao', 'cloud', 'common']
         }
         rootProjectPlugin {
             id = "io.github.shuigedeng.root"
             implementationClass = "com.taotao.cloud.gradle.springboot.plugin.RootPlugin"
+            displayName = 'springboot root plugin'
+            description = 'springboot root plugin'
+            tags = ['taotao', 'cloud', 'root']
         }
         servicePlugin {
             id = "io.github.shuigedeng.service"
             implementationClass = "com.taotao.cloud.gradle.springboot.plugin.ServicePlugin"
+            displayName = 'springboot service plugin'
+            description = 'springboot service plugin'
+            tags = ['taotao', 'cloud', 'service']
         }
-        deployedPlugin {
-            id = "io.github.shuigedeng.deployed"
-            implementationClass = "com.taotao.cloud.gradle.springboot.plugin.DeployedPlugin"
-        }
+        //deployedPlugin {
+        //    id = "io.github.shuigedeng.deployed"
+        //    implementationClass = "com.taotao.cloud.gradle.springboot.plugin.DeployedPlugin"
+        //    displayName = 'springboot deployed plugin'
+        //    description = 'springboot deployed plugin'
+        //    tags = ['taotao', 'cloud', 'plugin', 'deployed']
+        //}
     }
 }
