--- a/taotao-cloud-plugin/taotao-cloud-gradle-plugin/build.gradle
+++ b/taotao-cloud-plugin/taotao-cloud-gradle-plugin/build.gradle
@@ -96,6 +96,7 @@ dependencies {
     testImplementation "org.assertj:assertj-core:3.27.3"
 }
 
+group = "com.taotao.cloud.gradle"
 
 gradlePlugin {
     website = 'https://github.com/shuigedeng/taotao-cloud-project'
