--- a/taotao-cloud-microservice/taotao-cloud-monitor/src/main/resources/application-dev.yml
+++ b/taotao-cloud-microservice/taotao-cloud-monitor/src/main/resources/application-dev.yml
@@ -118,6 +118,8 @@ spring:
   config:
     activate:
       on-profile: dev
+  pid:
+    file: ${user.home}/logs/${spring.application.name}/${spring.application.name}.pid
   cloud:
     compatibility-verifier:
       enabled: false
