--- a/taotao-cloud-microservice/taotao-cloud-xxljob/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-xxljob/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation "org.mybatis:mybatis-spring:3.0.5"
     implementation "com.mysql:mysql-connector-j"
     implementation "com.xuxueli:xxl-job-core"
+
+    implementation "com.google.protobuf:protobuf-java:3.25.5"
+    implementation "com.google.protobuf:protobuf-java-util:3.25.5"
 }
 
 mainClassName = "com.taotao.cloud.xxljob.TaoTaoCloudXxlJobApplication"
@@ -45,6 +48,8 @@ configurations {
         resolutionStrategy {
             //force "org.codehaus.groovy:groovy:3.0.25"
             //force "com.alibaba.nacos:nacos-client:2.4.3"
+            force "com.google.protobuf:protobuf-java:3.25.5"
+            force "com.google.protobuf:protobuf-java-util:3.25.5"
         }
 
 
