--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-biz/build.gradle
@@ -43,8 +43,8 @@ dependencies {
     implementation 'org.springframework.session:spring-session-data-redis:3.5.1'
 
     //https://central.sonatype.com/artifact/com.github.binarywang/weixin-java-pay?smo=true
-    implementation 'com.github.binarywang:weixin-java-mp:4.7.5-20250529.111829'
-    implementation 'com.github.binarywang:weixin-java-miniapp:4.7.5-20250529.111829'
+    implementation 'com.github.binarywang:weixin-java-mp:4.7.6.B'
+    implementation 'com.github.binarywang:weixin-java-miniapp:4.7.6.B'
 
     //implementation 'top.dcenter:justAuth-spring-security-starter:1.1.25'
 
@@ -90,7 +90,7 @@ dependencies {
     //https://search.maven.org/artifact/com.nimbusds/nimbus-jose-jwt
     implementation "com.nimbusds:nimbus-jose-jwt:10.3"
     //https://search.maven.org/artifact/com.nimbusds/oauth2-oidc-sdk
-    implementation 'com.nimbusds:oauth2-oidc-sdk:11.25'
+    implementation 'com.nimbusds:oauth2-oidc-sdk:11.26'
 
     implementation "org.apache.commons:commons-collections4"
 
