--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-message/taotao-cloud-message-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-message/taotao-cloud-message-biz/build.gradle
@@ -38,11 +38,11 @@ dependencies {
     implementation("com.aliyun:alibaba-dingtalk-service-sdk:2.0.0") {
         exclude group: "com.sun.jmx", module: "jmxri"
     }
-    implementation 'com.alipay.sdk:alipay-sdk-java:4.40.237.ALL'
+    implementation 'com.alipay.sdk:alipay-sdk-java:4.40.272.ALL'
 
-    implementation "com.github.binarywang:weixin-java-cp:4.7.5-20250529.111829"
-    implementation "com.github.binarywang:weixin-java-miniapp:4.7.5-20250529.111829"
-    implementation "com.github.binarywang:weixin-java-mp:4.7.5-20250529.111829"
+    implementation "com.github.binarywang:weixin-java-cp:4.7.6.B"
+    implementation "com.github.binarywang:weixin-java-miniapp:4.7.6.B"
+    implementation "com.github.binarywang:weixin-java-mp:4.7.6.B"
 
     implementation 'com.ctrip.framework.apollo:apollo-client-config-data:2.4.0'
     implementation 'org.dromara.dynamictp:dynamic-tp-spring-boot-starter-apollo:1.2.1-x'
