--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-payment/taotao-cloud-payment-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-payment/taotao-cloud-payment-biz/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation "io.github.shuigedeng:taotao-boot-starter-webagg"
 
     //https://search.maven.org/artifact/com.alipay.sdk/alipay-sdk-java
-    implementation('com.alipay.sdk:alipay-sdk-java:4.40.237.ALL') {
+    implementation('com.alipay.sdk:alipay-sdk-java:4.40.272.ALL') {
         exclude group: "org.bouncycastle", module: "bcprov-jdk15on"
         exclude group: "commons-logging", module: "commons-logging"
         exclude group: "xml-apis", module: "xml-apis"
@@ -43,8 +43,8 @@ dependencies {
     implementation "com.github.javen205:IJPay-All:2.9.12.1-17"
 
     //https://search.maven.org/artifact/com.github.binarywang/weixin-java-pay
-    implementation "com.github.binarywang:weixin-java-pay:4.7.5-20250529.111829"
-    implementation "com.github.binarywang:weixin-java-mp:4.7.5-20250529.111829"
+    implementation "com.github.binarywang:weixin-java-pay:4.7.6.B"
+    implementation "com.github.binarywang:weixin-java-mp:4.7.6.B"
 
     //https://search.maven.org/artifact/com.paypal.sdk/checkout-sdk
     implementation "com.paypal.sdk:checkout-sdk:2.0.0"
