--- a/taotao-cloud-microservice/taotao-cloud-shell/src/main/resources/application-dev.yml
+++ b/taotao-cloud-microservice/taotao-cloud-shell/src/main/resources/application-dev.yml
@@ -133,6 +133,9 @@ redisson:
   #  scanInterval: 1000
 
 spring:
+  shell:
+    interactive:
+      enabled: true
   config:
     activate:
       on-profile: dev
