--- a/taotao-cloud-microservice/taotao-cloud-shell/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-shell/build.gradle
@@ -1,28 +1,28 @@
 dependencies {
     //boot
     implementation "io.github.shuigedeng:taotao-boot-starter-core"
-    implementation "io.github.shuigedeng:taotao-boot-starter-logger"
-    implementation "io.github.shuigedeng:taotao-boot-starter-dingtalk"
-    implementation "io.github.shuigedeng:taotao-boot-starter-idgenerator"
-    implementation "io.github.shuigedeng:taotao-boot-starter-lock"
-    implementation "io.github.shuigedeng:taotao-boot-starter-prometheus"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-logger"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-dingtalk"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-idgenerator"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-lock"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-prometheus"
     implementation "io.github.shuigedeng:taotao-boot-starter-actuator"
-    implementation "io.github.shuigedeng:taotao-boot-starter-monitor"
-    implementation "io.github.shuigedeng:taotao-boot-starter-metrics"
-    implementation "io.github.shuigedeng:taotao-boot-starter-tracer"
-    implementation "io.github.shuigedeng:taotao-boot-starter-mail"
-    implementation "io.github.shuigedeng:taotao-boot-starter-skywalking"
-    implementation "io.github.shuigedeng:taotao-boot-starter-cache-redis"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-monitor"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-metrics"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-tracer"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-mail"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-skywalking"
+    //implementation "io.github.shuigedeng:taotao-boot-starter-cache-redis"
 
-    implementation("org.springframework.boot:spring-boot-starter-web") {
-        exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
-    }
+    //implementation("org.springframework.boot:spring-boot-starter-web") {
+    //    exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+    //}
     implementation "org.springframework.boot:spring-boot-starter-undertow"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
-    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
-    testImplementation("org.springframework.boot:spring-boot-starter-test") {
-        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
-    }
+    //implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    //testImplementation("org.springframework.boot:spring-boot-starter-test") {
+    //    exclude group: "org.junit.vintage", module: "junit-vintage-engine"
+    //}
 
     //https://central.sonatype.com/artifact/org.springframework.shell/spring-shell-starter
     implementation 'org.springframework.shell:spring-shell-starter:3.4.0'
@@ -32,7 +32,7 @@ dependencies {
     implementation 'com.beust:jcommander:1.82'
 
     //https://search.maven.org/artifact/com.github.whvcse/easy-captcha
-    implementation "com.github.whvcse:easy-captcha:1.6.2"
+    //implementation "com.github.whvcse:easy-captcha:1.6.2"
     implementation "jakarta.servlet:jakarta.servlet-api"
 
     implementation "org.eclipse.jgit:org.eclipse.jgit:7.3.0.202506031305-r"
