--- a/taotao-cloud-microservice/taotao-cloud-gateway/src/main/resources/bootstrap-dev.yml
+++ b/taotao-cloud-microservice/taotao-cloud-gateway/src/main/resources/bootstrap-dev.yml
@@ -32,7 +32,7 @@ spring:
           user.name: "admin"
           user.password: "123456"
         group: TAOTAO_CLOUD_GROUP
-        namespace: taotao-cloud-dev
+        namespace: 82f5c2ff-c0d5-478d-9987-7f082d1a55d7
         username: nacos
         password: nacos
         cluster-name: CQ
@@ -40,7 +40,7 @@ spring:
       config:
         enabled: false
         server-addr: 192.168.218.2:8848
-        namespace: taotao-cloud-dev
+        namespace: 82f5c2ff-c0d5-478d-9987-7f082d1a55d7
         file-extension: yml
         cluster-name: CQ
         group: TAOTAO_CLOUD_GROUP
