--- a/taotao-cloud-microservice/taotao-cloud-generator/src/main/resources/application-dev.yml
+++ b/taotao-cloud-microservice/taotao-cloud-generator/src/main/resources/application-dev.yml
@@ -307,154 +307,6 @@ spring:
   #autoconfigure:
   #  exclude:
   #    - org.springframework.boot.actuate.autoconfigure.elasticsearch.ElasticSearchReactiveHealthContributorAutoConfiguration
-  dynamic:
-    tp:
-      enabled: true
-      enabledBanner: true           # 是否开启banner打印，默认true
-      enabledCollect: true          # 是否开启监控指标采集，默认false
-      collectorTypes: micrometer,logging     # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
-      logPath: /home/logs           # 监控日志数据路径，默认 ${user.home}/logs，采集类型非logging不用配置
-      monitorInterval: 5            # 监控时间间隔（报警判断、指标采集），默认5s
-      configType: yml               # 配置文件类型，非cloud nacos 和 apollo需配置，其他不用配
-      nacos: # nacos配置，不配置有默认值（规则appname-dev.yml这样），cloud应用不需要配置
-        dataId: taotao-cloud-generator-dev.yml
-        group: SYS_GROUP
-        namespace: taotao-cloud-dev
-      apollo: # apollo配置，不配置默认拿apollo配置第一个namespace
-        namespace: dynamic-tp-demo-dev.yml
-      platforms: # 通知报警平台配置
-        - platform: wechat
-          urlKey: 3a700-127-4bd-a798-c53d8b69c     # 替换
-          receivers: test1,test2                   # 接受人企微名称
-        - platform: ding
-          urlKey: f80dad441fcd655438f4a08dcd6a     # 替换
-          secret: SECb5441fa6f375d5b9d21           # 替换，非sign模式可以没有此值
-          receivers: 18888888888                   # 钉钉账号手机号
-        - platform: lark
-          urlKey: 0d944ae7-b24a-40                 # 替换
-          receivers: test1,test2                   # 接受人飞书名称/openid
-        - platform: email
-          receivers: "981376577@qq.com"            # 接受人邮箱 多个逗号连接
-      tomcat-tp: # tomcat webserver线程池配置
-        threadPoolName: taotao-cloud-generator-tomcat-executor
-        threadPoolAliasName: tomcat线程池
-        corePoolSize: 100
-        maximumPoolSize: 200
-        keepAliveTime: 60
-      jettyTp: # jetty weberver线程池配置
-        threadPoolName: taotao-cloud-generator-jetty-executor
-        threadPoolAliasName: jetty线程池
-        corePoolSize: 100
-        maximumPoolSize: 200
-        keepAliveTime: 60
-      undertowTp: # undertow webserver线程池配置
-        threadPoolName: taotao-cloud-generator-undertow-executor
-        threadPoolAliasName: undertow线程池
-        corePoolSize: 100
-        maximumPoolSize: 200
-        keepAliveTime: 60
-        notifyItems: # 报警项，不配置自动会按默认值配置（变更通知、容量报警、活性报警）
-          - type: capacity                       # 报警项类型，查看源码 NotifyTypeEnum枚举类
-            enabled: true
-            threshold: 80                        # 报警阈值
-            platforms: [ ding,wechat,email ]             # 可选配置，不配置默认拿上层platforms配置的所以平台
-            interval: 120                        # 报警间隔（单位：s）
-      dubboTp: # dubbo 线程池配置
-        - threadPoolName: dubboTp#20883            # 名称规则：dubboTp + "#" + 协议端口
-          threadPoolAliasName: 测试线程池             # dubbo线程池
-          corePoolSize: 100
-          maximumPoolSize: 200
-          keepAliveTime: 60
-          notifyItems: # 报警项，不配置自动会按默认值配置（变更通知、容量报警、活性报警）
-            - type: capacity                       # 报警项类型，查看源码 NotifyTypeEnum枚举类
-              enabled: true
-              threshold: 80                        # 报警阈值
-              platforms: [ ding,wechat,email ]             # 可选配置，不配置默认拿上层platforms配置的所以平台
-              interval: 120                        # 报警间隔（单位：s）
-      rocketMqTp: # rocketmq 线程池配置
-        - threadPoolName: group1#topic1            # 名称规则：group + "#" + topic
-          corePoolSize: 200
-          maximumPoolSize: 200
-          keepAliveTime: 60
-          notifyItems: # 报警项，不配置自动会按默认值配置（变更通知、容量报警、活性报警）
-            - type: capacity                       # 报警项类型，查看源码 NotifyTypeEnum枚举类
-              enabled: true
-              threshold: 80                        # 报警阈值
-              platforms: [ ding,wechat,email ]             # 可选配置，不配置默认拿上层platforms配置的所以平台
-              interval: 120                        # 报警间隔（单位：s）
-      executors: # 动态线程池配置，都有默认值，采用默认值的可以不配置该项，减少配置量
-        - threadPoolName: taotao-cloud-generator-executor
-          threadNamePrefix: taotao-cloud-generator-executor  # 线程名前缀
-          threadPoolAliasName: 测试线程池             # 线程池别名
-          executorType: common                     # 线程池类型common、eager：适用于io密集型
-          corePoolSize: 6
-          maximumPoolSize: 8
-          queueCapacity: 200
-          queueType: VariableLinkedBlockingQueue   # 任务队列，查看源码QueueTypeEnum枚举类
-          rejectedHandlerType: CallerRunsPolicy    # 拒绝策略，查看RejectedTypeEnum枚举类
-          keepAliveTime: 50
-          allowCoreThreadTimeOut: false                  # 是否允许核心线程池超时
-          waitForTasksToCompleteOnShutdown: false        # 参考spring线程池设计，优雅关闭线程池
-          awaitTerminationSeconds: 5                     # 单位（s）
-          preStartAllCoreThreads: false                  # 是否预热所有核心线程，默认false
-          runTimeout: 200                                # 任务执行超时阈值，目前只做告警用，单位（ms）
-          queueTimeout: 100                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
-          taskWrapperNames: [ "ttl", "mdc", "swTrace" ]                      # 任务包装器名称，集成TaskWrapper接口
-          notifyItems: # 报警项，不配置自动会按默认值配置（变更通知、容量报警、活性报警、拒绝报警、任务超时报警）
-            - type: capacity               # 报警项类型，查看源码 NotifyTypeEnum枚举类
-              enabled: true
-              threshold: 80                # 报警阈值
-              platforms:
-                - ding
-                - wechat
-                - email
-              interval: 120                # 报警间隔（单位：s）
-              clusterLimit: 1
-            - type: change
-              enabled: true
-              threshold: 80                # 报警阈值
-              platforms:
-                - ding
-                - wechat
-                - email
-              interval: 120                # 报警间隔（单位：s）
-              clusterLimit: 1
-            - type: liveness
-              enabled: true
-              threshold: 80                # 报警阈值
-              platforms:
-                - ding
-                - wechat
-                - email
-              interval: 120                # 报警间隔（单位：s）
-              clusterLimit: 1
-            - type: reject
-              enabled: true
-              threshold: 1                # 报警阈值
-              platforms:
-                - ding
-                - wechat
-                - email
-              interval: 120                # 报警间隔（单位：s）
-              clusterLimit: 1
-            - type: run_timeout
-              enabled: true
-              threshold: 1                # 报警阈值
-              platforms:
-                - ding
-                - wechat
-                - email
-              interval: 120                # 报警间隔（单位：s）
-              clusterLimit: 1
-            - type: queue_timeout
-              enabled: true
-              threshold: 1                # 报警阈值
-              platforms:
-                - ding
-                - wechat
-                - email
-              interval: 120                # 报警间隔（单位：s）
-              clusterLimit: 1
   lifecycle:
     timeout-per-shutdown-phase: 30s
   thymeleaf:
@@ -507,7 +359,7 @@ spring:
     #driver-class-name: com.mysql.cj.jdbc.Driver
     #url: jdbc:p6spy:mysql://127.0.0.1:13306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true&rewriteBatchedStatements=true
     #driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:mysql://127.0.0.1:3306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true&rewriteBatchedStatements=true
+    url: jdbc:p6spy:mysql://192.168.218.2:3306/${spring.application.name}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&allowMultiQueries=true&autoReconnect=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
